# llm-education

./: .gitignore  README.md  bootstrap.py  pyproject.toml  test.py
src/models/: transformer.py
src/utils/: sampling.py
test/: test_models.py  test_sampling.py
